--- a/main.html
+++ b/main.html
@@ -7,8 +7,16 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<img role="img" alt="profile image" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png">
+    <h1 role="heading">Name: Anshu Kumar</h1>
+	<ul role="list">
+		<li role="listitem">JS</li>
+		<li role="listitem">DSA</li>
+		<li role="listimte">MERN</li>
+	</ul>
+	<nav role="navigation"></nav>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
